<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="amgad.com.hayy2.PlaceInfoActivity">

    <!-- ـــــــــــــــــــــــــــ -->
    <!--ـــــــــــ الصورة ـــــــــــ -->
    <!-- ـــــــــــــــــــــــــــ -->

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/CoverCard"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="400px"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/image"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- ـــــــــــــــــــــــــــ -->
    <!--ـــــــــــ الخريطة ـــــــــــ -->
    <!-- ـــــــــــــــــــــــــــ -->


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/MapCard"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="600px"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp">

           <fragment
                android:id="@+id/map"
                android:name="amgad.com.hayy2.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                class="com.google.android.gms.maps.SupportMapFragment"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- ـــــــــــــــــــــــــــ -->
    <!--ـــــــــــالقصة ـــــــــــ -->
    <!-- ـــــــــــــــــــــــــــ -->

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/StoryCard"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/StoryTitle"
                android:layout_gravity="end"
                android:text="@string/the_story"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/description"
                android:layout_gravity="end"
                android:text="@string/story_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <!-- ـــــــــــــــــــــــــــ -->
    <!--ـــــــــالمنشئ ـــــــــــ -->
    <!-- ـــــــــــــــــــــــــــ -->


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/CommissionedCard"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/commissioned_by_name"
                android:layout_gravity="end"
                android:text="@string/Commissioner"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/commissioned_by"
                android:layout_gravity="end"
                android:text="@string/Commissioner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <!-- ـــــــــــــــــــــــــــ -->
    <!--ـــــــــــ الحقبة ـــــــــــ -->
    <!-- ـــــــــــــــــــــــــــ -->

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/DateCard"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/DateTitle"
                android:layout_gravity="end"
                android:text="@string/epoch"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <!-- السطر الهجري -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="6dp"
                android:layout_gravity="end"
                android:gravity="end">


                <TextView
                    android:id="@+id/date_hijri_to"
                    android:text="@string/date_hijri_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:textSize="17sp"/>
                <TextView
                    android:id="@+id/toH"
                    android:text="@string/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:textSize="17sp"/>
                <TextView
                    android:id="@+id/date_hijri_from"
                    android:text="@string/date_hijri_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:textSize="17sp"/>
                <TextView
                    android:id="@+id/fromH"
                    android:text="@string/from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:textSize="17sp" />
                <TextView
                    android:id="@+id/ha2"
                    android:text="@string/ha2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>


            <!-- السطر الميلادي -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="end"
                android:gravity="end">


                <TextView
                    android:id="@+id/date_gregorian_to"
                    android:text="@string/date_gregorian_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:textSize="17sp"/>
                <TextView
                    android:id="@+id/toG"
                    android:text="@string/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:textSize="17sp"/>
                <TextView
                    android:id="@+id/date_gregorian_from"
                    android:text="@string/date_gregorian_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:textSize="17sp"/>
                <TextView
                    android:id="@+id/fromG"
                    android:text="@string/from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:textSize="17sp" />
                <TextView
                    android:id="@+id/meem"
                    android:text="@string/meem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>